--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ h2{
 }
 
 header h2{
-    color: cec8ff;
+    color: #cec8ff;
 }
 
 footer{
@@ -20,7 +20,8 @@ footer{
 }
 
 .jumbotron{
-    padding: 3px;
+    margin: 0;
+    padding: 30px;
     background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
     color: white;
 }
@@ -29,4 +30,8 @@ footer{
     padding: 50px 0;
     border-bottom: 1px ridge;
     min-height: 200px;
+}
+
+.navbar{
+    background-color: #901CAD;
 }
